# django_todo_postgres

./: .envrc  Makefile  README.md  delete.md  gunicorn.conf.py  gunicorn_config.py  pyproject.toml  setup_postgres.sh
account/: urls.py
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py
config/: settings.py  urls.py
deploy/: django_todo_postgres  gunicorn.service  todo
deploy/local/: todo  todocorn.service
deploy/staging/: todo  todocorn.service
scripts/: check_deploy_status.sh  remove_db.py  setup_db.py  uninstall_todocorn.sh
static/admin/css/: base.css
templates/: _base.html  base.html  nav.html
templates/account/: login.html  password_change.html  signup.html
templates/admin/: base_site.html
templates/admin/css/: base.css  dark_mode.css
templates/todos/: add_todo.html  list_todo.html  userlist.html
todos/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
todos/management/commands/: create_test_data.py
todos/migrations/: 0001_initial.py  0002_inputfield_floatinputfield_integerinputfield_and_more.py  0003_remove_inputfield_polymorphic_ctype_and_more.py  0004_remove_todo_user.py  0005_todo_user.py
todos/templates/: add_todo.html  list_todo.html
todos/templates/todos/: add_todo.html  list_todo.html
